2024-02-04T16:16:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7775296738 # 86
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-04
* notice: last 14d: unq all: 4 32
* notice: prev accum: outdated-unq outdated-all / unq all: 739 1167 / 757 1199
* notice: next accum: outdated-unq outdated-all / unq all: 739 1167 / 757 1200
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-02-04]

2024-02-04T08:17:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7772723549 # 85
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-04
* notice: last 14d: unq all: 4 31
* notice: prev accum: outdated-unq outdated-all / unq all: 739 1167 / 756 1198
* notice: next accum: outdated-unq outdated-all / unq all: 739 1167 / 757 1199
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-02-04]

2024-02-04T01:08:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7770626911 # 84
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-04
* notice: last 14d: unq all: 4 30
* notice: prev accum: outdated-unq outdated-all / unq all: 738 1165 / 756 1198
* notice: next accum: outdated-unq outdated-all / unq all: 739 1167 / 756 1198
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [2024-01-20] / [2024-01-21]

2024-02-03T16:17:39Z: