@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-01-23T01:10:15Z",
-  "count" : 2,
+  "timestamp" : "2024-02-05T01:05:24Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
+  "count_decinc" : [ -1, +2 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
