@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-02-04T16:16:26Z",
-  "count_outdated" : 1167,
-  "uniques_outdated" : 739,
+  "timestamp" : "2024-02-05T01:05:24Z",
+  "count_outdated" : 1169,
+  "uniques_outdated" : 740,
   "count" : 1200,
   "uniques" : 757,
   "clones" : [
     {
-      "timestamp": "2024-01-21T00:00:00Z",
+      "timestamp": "2024-01-22T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
-      "timestamp": "2024-01-22T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
