@@ -1,3 +1,12 @@
+2024-02-05T01:05:24Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7778157066 # 87
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-05
+* notice: last 14d: unq all: 4 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 739 1167 / 757 1200
+* notice: next accum: outdated-unq outdated-all / unq all: 740 1169 / 757 1200
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [2024-01-21] / [2024-01-22]
+
 2024-02-04T16:16:26Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7775296738 # 86
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-04
